Add dummy content for the menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </a>
   </div>
 
-  <div class="menu-overlay"></div>
+  <div class="menu-overlay">
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </div>
 
 </body>
 
