Start with more code

--- a/01 - Starting point/index.html
+++ b/01 - Starting point/index.html
@@ -9,8 +9,23 @@
 </head>
 
 <body>
-  
-  
+
+  <div class="menu">
+    <span class="menu-circle"></span>
+    <a href="#" class="menu-link">
+      <span class="menu-icon">
+        <span class="menu-line menu-line-1"></span>
+        <span class="menu-line menu-line-2"></span>
+        <span class="menu-line menu-line-3"></span>
+      </span>
+    </a>
+  </div>
+
+  <div class="menu-overlay">
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </div>
   
 </body>
 
