--- a/03 - A menu button/index.html
+++ b/03 - A menu button/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Animated Menu | Tobias Ahlin for .net</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
@@ -22,6 +21,12 @@
     </a>
   </div>
 
+  <div class="menu-overlay">
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </div>
+  
 </body>
 
 </html>
